# pytools

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py
ArtSignGenerator/: ArtSignGenerator.py  README.md  requirements.txt
Calculator/: README.md  calculator.py
Clock/: README.md  clock.py
ComputerSinger/: ComputerSinger.py  README.md
ComputerSinger/musicfiles/: 小幸运  逍遥叹
ControlPCbyEmail/: README.md  Server.py  config.json  requirements.txt
Couplet/: README.md  couplet.py
DesktopPet/: DesktopPet.py  README.md  cfg.py
GenderPredictor/: README.md  main.py
HubbleSee/: HubbleSee.py  README.md  requirements.txt
HubbleSee/01-08/: intro.txt
HubbleSee/resources/: hubble-birthdays-full-year.xlsx
IdiomSolitaire/: IdiomSolitaire.py  README.md
MovieHelper/: README.md  main.py  movieHelper.py  requirements.txt
MovieHelper/API/: __init__.py  douban.py  paofan.py  resource.py
MusicPlayer/: MusicPlayer.py  README.md
NaughtyConfession/: README.md  cfg.py  love.py
NewYearCard/: README.md  generateCard.py  requirements.txt
NewYearCard/contents/: 1.card
PortSanner/: README.md  scanport.py
Runcat/: README.md  runcat.py
SucculentQuery/: README.md  SucculentQuery.py  requirements.txt
SucculentQuery/modules/: __init__.py  crawler.py
Timer/: README.md  Timer.py  requirements.txt
Translator/: README.md  Translator.py  js.py  requirements.txt
TrumpTweetsGenerator/: README.md  TrumpTweetsGenerator.py  requirements.txt
VideoPlayer/: README.md  VideoPlayer.py
docs/: Author.md  Changelog.md  Install.md  Quickstart.md  State.md  index.rst
earthWallpaper/: README.md  earthWallpaper.py
emailSecurity/: README.md  emailSecurity.py  emails_test.txt  requirements.txt
idcardquery/: README.md  idcardquery.py
inquiryExpress/: README.md  companies.pkl  inquiryExpress.py  requirements.txt
ipLocQuery/: README.md  ipLocQuery.py  requirements.txt  testIPs.txt
luxunSentencesQuery/: README.md  main.py  requirements.txt
makeQrcode/: README.md  genQrcode.py  requirements.txt
pytools/: __init__.py  pytools.py
tests/: conftest.py  test_setup_validation.py
(+120 files in other folders)
