[tool.poetry]
name = "pikachupytools"
version = "0.1.24"
description = "Pytools: Some useful tools written by pure python."
authors = ["Charles <charlesblwx@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/CharlesPikachu/pytools"
repository = "https://github.com/CharlesPikachu/pytools"
packages = [{include = "pytools"}]

[tool.poetry.dependencies]
python = "^3.8"
SimpleGUICS2Pygame = "*"
lxml = "*"
requests = "*"
fuzzywuzzy = "*"
PyQt5 = "*"
qrcode = "*"
pygame = "*"
psutil = "*"
js2py = "*"
markovify = "*"
python-Levenshtein = "*"
id_validator = "*"
IPy = "*"
pillow = "*"
openpyxl = "*"
click = "*"
beautifulsoup4 = "*"
pythonping = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-mock = "^3.12"

[tool.poetry.scripts]
test = "pytest:main"
tests = "pytest:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pytools",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["pytools"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/distutils/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"